# libmessage

./: .gitignore  CMakeLists.txt  README.md
docs/: Doxyfile  annotated.html  classes.html  crc32_8c.html  crc32_8h.html  crc32_8h_source.html  crc32__atmega_8c.html  crc32__tiva_8c.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  index.html  menudata.js  message_8h.html  message_8h_source.html  messagebox_8c.html  messagebox_8h.html  messagebox_8h_source.html  ringbuffer_8c.html  ringbuffer_8h.html  ringbuffer_8h_source.html  structMessage.html  structMessageBox.html  structMessageFrame.html  structMessagePacket.html  uart_8h.html  uart_8h_source.html  uart__atmega_8c.html  uart__message_8h.html  uart__message_8h_source.html  (+3 more)
docs/config/: Doxyfile
docs/html/: annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  globals_defs.html  globals_eval.html  globals_type.html  globals_vars.html  index.html  md__home_trongphuong_Work_AVR_libraries_message_README.html  pages.html  structMessagePacket-members.html  struct__MessagePacket-members.html  struct__MessagePacket.html  struct____attribute____-members.html  struct____attribute____.html  uart_8h_source.html  uart__message_8h.html  uart__message_8h_source.html
docs/html/search/: all_2.js  all_3.js  all_4.js  classes_1.js  defines_0.js  enums_0.js  files_0.js  functions_0.js  functions_1.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_0.js  variables_2.js
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  defines_0.js  defines_1.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js
include/: crc32.h  message.h  messagebox.h  ringbuffer.h  uart.h  uart_message.h
lib/: crc32.c  crc32_atmega.c  crc32_tiva.c  uart_atmega.c  uart_tiva.c
src/: messagebox.c  ringbuffer.c  uart_message.c  uart_message_atmega.c  uart_message_tiva.c
